# django-extensions-shell

./: CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
django_extensions_shell/: __init__.py
docs/: AUTHORS  conf.py  creating_release.txt  index.rst
tests/: test_create_command.py
