[bumpversion]
current_version = 1.7.5
commit = False
tag = False

[bumpversion:file:django_extensions_shell/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
ignore = E128,E501,E731
exclude = venv/

[tool:pytest]
norecursedirs = venv* .tox .eggs build dist django_extensions.egg-info django_extensions/mongodb
addopts = --doctest-modules

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_third_party = django
known_first_party = django_extensions_shell
multi_line_output = 5

[metadata]
description-file =
    README.rst
    CHANGES.rst
license-file = LICENSE
